--- a/templates/index.html
+++ b/templates/index.html
@@ -384,7 +384,7 @@
     flex-wrap: wrap;">
                 
                 <div class="col-lg-6 col-md-12" style="margin-top:20%">
-                   <iframe width="100%" height="400" src="https://www.youtube.com/embed/9pf4qg-CiP4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                   <iframe width="100%" height="400" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-md-12 ">
                     <div class="">
